[workspace]
resolver = "2"

members = [
  "crates/*",
  "crates/*/sys",
  "bin/*",
  "lib/*",
  "xtask",
]

default-members = [
  "crates/*",
  "crates/*/sys",
  "lib/*",
  "bin/propolis-standalone",
  "xtask",
]

exclude = [
  "crates/bhyve-api/header-check",
  "crates/nvpair/header-check",
  "crates/viona-api/header-check",
]

# If one wants the 'dev' profile, but with "panic = abort" semantics, they
# should opt in with this profile.  Unwinding is required by PHD and
# should_abort cargo tests, and so remains the default for the 'dev' profile.
[profile.dev-abort]
inherits = "dev"
panic = "abort"

# Building for 'release' implies running on a real illumos system, where we
# certainly want (rust) panics to cause an immediate abort and coredump.
[profile.release]
panic = "abort"

[workspace.dependencies]
# Internal crates
bhyve_api = { path = "crates/bhyve-api" }
bhyve_api_sys = { path = "crates/bhyve-api/sys" }
cpuid_utils = { path = "crates/cpuid-utils" }
cpuid_profile_config = { path = "crates/cpuid-profile-config" }
dladm = { path = "crates/dladm" }
nvpair = { path = "crates/nvpair" }
nvpair_sys = { path = "crates/nvpair/sys" }
propolis_types = { path = "crates/propolis-types" }
rfb = { path = "crates/rfb" }
rgb_frame = { path = "crates/rgb-frame" }
viona_api = { path = "crates/viona-api" }
viona_api_sys = { path = "crates/viona-api/sys" }

# Public library crates
propolis = { path = "lib/propolis", default-features = false }

# Propolis cfg(feature = "falcon")
dlpi = { git = "https://github.com/oxidecomputer/dlpi-sys", branch = "main" }
ispf = { git = "https://github.com/oxidecomputer/ispf" }
libloading = "0.7"
p9ds = { git = "https://github.com/oxidecomputer/p9fs" }
softnpu = { git = "https://github.com/oxidecomputer/softnpu" }

# External dependencies
anyhow = "1.0"
async-trait = "0.1.88"
atty = "0.2.14"
backoff = "0.4.0"
backtrace = "0.3.66"
base64 = "0.21"
bit_field = "0.10.1"
bitflags = "2.4"
bitstruct = "0.1"
bitvec = "1.0"
byteorder = "1"
bytes = "1.7.1"
camino = "1.1.6"
cargo_metadata = "0.18.1"
cc = "1.0.73"
cfg-if = "1.0.0"
chrono = "0.4.19"
clap = "4.2"
const_format = "0.2"
crossbeam-channel = "0.5"
ctrlc = "3.2"
dropshot = "0.16.4"
erased-serde = "0.4"
errno = "0.2.8"
expectorate = "1.0.5"
fatfs = "0.3.6"
futures = "0.3"
futures-util = "0.3.21"
flate2 = "1.0.28"
heck = "0.5.0"
hex = "0.4.3"
http = "1.1.0"
hyper = "1.0"
linkme = "0.3.33"
itertools = "0.13.0"
kstat-rs = "0.2.4"
lazy_static = "1.4"
libc = "0.2"
mockall = "0.12"
newtype_derive = "0.1.6"
newtype-uuid = { version = "1.0.1", features = [ "v4" ] }
oxide-tokio-rt = "0.1.2"
paste = "1.0.15"
pin-project-lite = "0.2.13"
proc-macro2 = "1.0"
proc-macro-error = "1"
progenitor = "0.10.0"
progenitor-client = "0.10.0"
proptest = "1.5.0"
quote = "1.0"
rand = "0.9.1"
reqwest = { version = "0.12.0", default-features = false }
ring = "0.17"
ron = "0.8"
schemars = "0.8.10"
semver = "1.0"
serde = "1.0"
serde_arrays = "0.1"
serde_derive = "1.0"
serde_json = "1.0"
serde_test = "1.0.138"
slog = "2.7"
slog-async = "2.8"
slog-bunyan = "2.4.0"
slog-dtrace = "0.3"
slog-term = "2.8"
strum = "0.26"
syn = "1.0"
tar = "0.4"
tempfile = "3.2"
termwiz = "0.20"
thiserror = "1.0"
tokio = "1"
tokio-tungstenite = "0.21"
tokio-util = "0.7"
toml = "0.7.8"
tracing = "0.1.35"
tracing-appender = "0.2.2"
tracing-bunyan-formatter = "0.3.3"
tracing-subscriber = "0.3.14"
usdt = { version = "0.5", default-features = false }
uuid = "1.3.2"
zerocopy = "0.8.25"
