[package]
name = "propolis"
version = "0.1.0"
license = "MPL-2.0"
edition = "2021"
rust-version = "1.83"

[dependencies]
libc.workspace = true
bitflags.workspace = true
bitstruct.workspace = true
byteorder.workspace = true
lazy_static.workspace = true
thiserror.workspace = true
bhyve_api.workspace = true
cpuid_utils.workspace = true
dladm.workspace = true
viona_api.workspace = true
propolis_types.workspace = true
usdt = { workspace = true, features = ["asm"] }
tokio = { workspace = true, features = ["full"] }
futures.workspace = true
pin-project-lite.workspace = true
anyhow.workspace = true
rgb_frame.workspace = true
rfb.workspace = true
slog.workspace = true
serde.workspace = true
serde_arrays.workspace = true
erased-serde.workspace = true
serde_json.workspace = true
strum = { workspace = true, features = ["derive"] }
uuid.workspace = true
zerocopy = { workspace = true, features = ["derive"] }
async-trait.workspace = true

[dev-dependencies]
crossbeam-channel.workspace = true
tempfile.workspace = true
slog-term.workspace = true
slog-async.workspace = true
rand.workspace = true

[features]
default = []
